feat: add matcher algorithm to /predict/category endpoint
